--- a/app.json
+++ b/app.json
@@ -3,9 +3,9 @@
     "description": "A Script",
     "logo": "https://telegra.ph/file/667e15c821117633d07bd.png",
     "keywords": [],
-    "website": "https://github.com/CrazyBotsz",
-    "repository": "https://github.com/lawraa/af-deploy-script",
-    "success_url": "https://telegram.dog/CrazyBotsz",
+    "website": "https://github.com/lawraaa",
+    "repository": "https://github.com/lawraaa/af-deploy-script",
+    "success_url": "https://telegram.dog/lawraaa",
     "env": {
         "APP_ID": {
             "description": "Your APP ID From my.telegram.org or @UseTGXBot",
